--- a/superset-frontend/package.json
+++ b/superset-frontend/package.json
@@ -324,9 +324,9 @@
     "style-loader": "^3.2.1",
     "thread-loader": "^3.0.4",
     "transform-loader": "^0.2.4",
-    "ts-loader": "^9.2.5",
-    "typescript": "^4.5.4",
     "vm-browserify": "^1.1.2",
+    "ts-loader": "9.2.5",
+    "typescript": "4.5.4",
     "webpack": "^5.52.1",
     "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^4.8.0",
